--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         <img src="assets/images/banner.png" alt="Spider-Man Banner" />
         <h1 id="selectFighter">SELECT YOUR FIGHTER!</h1>
         <div class="row" id="fighterRow">
-            <div class="col-md-3">
-                <img src="assets/images/symbiote.png" alt="Sybiote Suit" id="symbioteImage">
+            <div class="col-md-3 character availableFighter" id="symbioteImage">
+                <img src="assets/images/symbiote.png" alt="Sybiote Suit">
                 <h3>Symbiote Suit</h3>
                 <h3 class="health">120</h3>
             </div>
-            <div class="col-md-3">
-                <img src="assets/images/spiderman.png" alt="Spider-Man" id="spidermanImage">
+            <div class="col-md-3 character availableFighter" id="spidermanImage">
+                <img src="assets/images/spiderman.png" alt="Spider-Man">
                 <h3>Spider-Man</h3>
                 <h3 class="health">100</h3>
             </div>
-            <div class="col-md-3">
-                <img src="assets/images/carnage.png" alt="Carnage" id="carnageImage">
+            <div class="col-md-3 character availableFighter" id="carnageImage">
+                <img src="assets/images/carnage.png" alt="Carnage">
                 <h3>Carnage</h3>
                 <h3 class="health">150</h3>
             </div>
-            <div class="col-md-3">
-                <img src="assets/images/venom.png" alt="Venom" id="venomImage">
+            <div class="col-md-3 character availableFighter" id="venomImage">
+                <img src="assets/images/venom.png" alt="Venom">
                 <h3>Venom</h3>
                 <h3 class="health">180</h3>
             </div>
@@ -66,8 +66,8 @@
             </div>
         </div>
     </div>
-    <script src="assets/javascript/game.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/javascript/game.js" type="text/javascript"></script>
 </body>
 
 </html>
