--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         <div class="row" id="fighterRow">
             <div class="col-md-3 character availableFighter" id="symbioteImage">
                 <img src="assets/images/symbiote.png" alt="Sybiote Suit">
-                <h3>Symbiote Suit</h3>
-                <h3 class="health">120</h3>
+                <h4>Symbiote Suit</h4>
+                <h4 class="health">120</h4>
             </div>
             <div class="col-md-3 character availableFighter" id="spidermanImage">
                 <img src="assets/images/spiderman.png" alt="Spider-Man">
-                <h3>Spider-Man</h3>
-                <h3 class="health">100</h3>
+                <h4>Spider-Man</h4>
+                <h4 class="health">100</h4>
             </div>
             <div class="col-md-3 character availableFighter" id="carnageImage">
                 <img src="assets/images/carnage.png" alt="Carnage">
-                <h3>Carnage</h3>
-                <h3 class="health">150</h3>
+                <h4>Carnage</h4>
+                <h4 class="health">150</h4>
             </div>
             <div class="col-md-3 character availableFighter" id="venomImage">
                 <img src="assets/images/venom.png" alt="Venom">
-                <h3>Venom</h3>
-                <h3 class="health">180</h3>
+                <h4>Venom</h4>
+                <h4 class="health">180</h4>
             </div>
         </div>
         <div class="row" id="gameplayRow">
@@ -62,7 +62,7 @@
         </div>
         <div class="row" id="enemyRow">
             <div class="col-md-12" id="enemySelect">
-                <h2>SELECT ENEMY!</h2>
+                <h2 id="selectEnemy">SELECT ENEMY!</h2>
             </div>
         </div>
     </div>
