--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1 id="selectFighter">SELECT YOUR FIGHTER!</h1>
         <div class="row" id="fighterRow">
             <div class="col-md-3 character availableFighter" id="symbioteImage">
-                <img src="assets/images/symbiote.png" alt="Sybiote Suit">
-                <h4>Symbiote Suit</h4>
+                <img src="assets/images/symbiote.png" alt="Sybiote">
+                <h4>Symbiote</h4>
                 <h4 class="health">120</h4>
             </div>
             <div class="col-md-3 character availableFighter" id="spidermanImage">
@@ -53,7 +53,9 @@
             </div>
         </div>
         <div class="row" id="messageRow">
-            <div class="col-md-12" id="gameMessage"></div>
+            <div class="col-md-12">
+                <h3 id="gameMessage"></h3>
+            </div>
         </div>
         <div class="row" id="restartRow">
             <div class="col-md-12">
