--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <img src="assets/images/banner.png" alt="Spider-Man Banner" />
-        <h1 id="selectFighter">SELECT YOUR FIGHTER!</h1>
+        <h1 id="selectFighter">SELECT YOUR FIGHTER</h1>
         <div class="row" id="fighterRow">
             <div class="col-md-3 character availableFighter" id="symbioteImage">
                 <img src="assets/images/symbiote.png" alt="Sybiote">
@@ -65,7 +65,7 @@
         </div>
         <div class="row" id="enemyRow">
             <div class="col-md-12" id="enemySelect">
-                <h2 id="selectEnemy">SELECT ENEMY!</h2>
+                <h2 id="selectEnemy">SELECT ENEMY</h2>
             </div>
         </div>
     </div>
