--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="row" id="restartRow">
             <div class="col-md-12">
-                <button class="btn btn-dark" id="restart">Restart</button>
+                <button class="btn-lg btn-danger" id="restart">Restart</button>
             </div>
         </div>
         <div class="row" id="enemyRow">
